proj1/tests/other-tests/oskis-angels_tests/error/keywords-illegal.py
as
assert
del
except
exec
finally
from
future
global
import
lambda
raise
try
with
yield
